--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
     sdk: flutter
   
   freezed_annotation: ^2.4.1
+  intl: ^0.18.1
   json_annotation: ^4.8.1
   logger: ^2.0.2+1
   provider: ^6.1.1
