--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,10 @@ dependencies:
   intl: ^0.18.1
   json_annotation: ^4.8.1
   logger: ^2.0.2+1
+  path: ^1.8.3
+  path_provider: ^2.1.1
   provider: ^6.1.1
+  sqflite: ^2.3.0
 
 
 
